[package]
name = "diesel_database_recipes"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

[lib]
name = "diesel_patches"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.4.2", features=["postgres"]}
dotenv = "0.15.0"
failure = "0.1.5"
failure_derive ="0.1.5"
clap = "2.33.0"
bcrypt = "0.9.0"